hphp/hack/test/typecheck/new_switch_exhaustivity/switch_bad.php.exp
WARN: File "switch_bad.php", line 6, characters 10-14:
Invalid case: This case will never match.
A value of type `float` can never be equal to a value of type `string` (Warn[12007])
WARN: File "switch_bad.php", line 15, characters 10-16:
Invalid case: This case will never match.
A value of type `A` can never be equal to a value of type `B` (Warn[12007])
ERROR: File "switch_bad.php", line 5, characters 3-43:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "switch_bad.php", line 5, characters 11-12:
  The scrutinee has type `float` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
ERROR: File "switch_bad.php", line 14, characters 3-45:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "switch_bad.php", line 14, characters 11-12:
  The scrutinee has type `A` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
